rest-book/src/main/resources/bookapp_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
  ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
  type: ClusterIP
