rest-book/src/main/resources/bookapp_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: book-route
spec:
  to:
    kind: Service
    name: book-service
  port:
    targetPort: 80
  tls:
    termination: edge
